--- a/scss/fundament-grid/_modifiers.scss
+++ b/scss/fundament-grid/_modifiers.scss
@@ -82,14 +82,25 @@
         // * --bottom
         // * Vertically align items of a row to the bottom.
         // * ---------------------
-
-        @if(fdmt-grid(modifiers, bottom) == true) {
-            &--bottom {
-                align-items: flex-end;
+            @if(fdmt-grid(modifiers, bottom) == true) {
+                &--bottom {
+                    align-items: flex-end;
+                }
+                &-#{$fdmt-grid--item}--bottom {
+                     vertical-align: bottom;
+                 }
             }
-            &-#{$fdmt-grid--item}--bottom {
-                 vertical-align: bottom;
-             }
+
+        // * --top
+        // * Align items to top in flexbox(default: stretch)
+        // * ---------------------
+        @if(fdmt-grid(modifiers, top) == true) {
+            &--top {
+                align-items: flex-start;
+            }
+            &-#{$fdmt-grid--item}--top {
+                vertical-align: top;
+            }
         }
 
         // * --middle
@@ -105,15 +116,18 @@
             }
         }
 
-        // * --top
-        // * Align items to top in flexbox(default: stretch)
+        // * --stretch
+        // * Vertically stretch items to fill parent (flexbox only)
         // * ---------------------
 
-        @if(fdmt-grid(modifiers, top) == true) {
-            &--top {
-                align-items: flex-start;
+        @if(fdmt-grid(modifiers, stretch) == true) {
+            &--stretch {
+                align-items: stretch;
+                img {
+                    align-items: flex-start
+                }
             }
-            &-#{$fdmt-grid--item}--top {
+            &-#{$fdmt-grid--item}--stretch {
                 vertical-align: top;
             }
         }
